@@ -63,3 +63,6 @@
 * Refactored DataFrame.rows and the  DataFrame constructor.
 * Added hierarchial indexing to Vector and DataFrame with MultiIndex.
 * Convert DataFrame to ruby Matrix or NMatrix with #to\_matrix and #to\_nmatrix.
+* Added #group_by to DataFrame for grouping rows according to elements in a given column. Works similar to SQL GROUP BY, only much simpler.
+* Added new class Daru::Core::GroupBy for supporting various grouping methods like #head, #tail, #get\_group, #size, #count, #mean, #std, #min, #max.
+* Tranpose indexed/multi-indexed DataFrame with #transpose.
